--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,13 @@
 
 plugins {
     id("java")
-    id("checkstyle")
-    id("com.github.spotbugs").version("5.0.6")
-    id("org.cadixdev.licenser").version("0.6.1")
+//    id("com.github.spotbugs").version("5.0.6")
+//    id("org.cadixdev.licenser").version("0.6.1")
     id("com.github.johnrengelman.shadow").version("7.1.2")
 }
 
 setGroup("net.elytrium")
-setVersion("1.0.4")
+setVersion("1.0.5")
 
 compileJava {
     getOptions().setEncoding("UTF-8")
@@ -50,7 +49,7 @@ dependencies {
 
     compileOnly("io.netty:netty-codec:$nettyVersion")
 
-    compileOnly("com.github.spotbugs:spotbugs-annotations:$spotbugsVersion")
+//    compileOnly("com.github.spotbugs:spotbugs-annotations:$spotbugsVersion")
 
     implementation("org.bstats:bstats-velocity:$bstatsVersion")
 }
@@ -64,31 +63,22 @@ shadowJar {
     relocate("net.elytrium.commons.config", "net.elytrium.limboapi.thirdparty.commons.config")
 }
 
-license {
-    setHeader(file("HEADER.txt"))
-}
+//license {
+//    setHeader(file("HEADER.txt"))
+//}
 
-checkstyle {
-    setToolVersion("10.1")
-    setConfigFile(file("${this.getRootDir()}/config/checkstyle/checkstyle.xml"))
-    setConfigProperties("configDirectory": "${this.getRootDir()}/config/checkstyle")
 
-    // The build should immediately fail if we have errors.
-    setMaxErrors(0)
-    setMaxWarnings(0)
-}
-
-spotbugsMain {
-    setExcludeFilter(file("${this.getRootDir()}/config/spotbugs/suppressions.xml"))
-
-    reports {
-        html {
-            getRequired().set(true)
-            getOutputLocation().set(file("${this.getBuildDir()}/reports/spotbugs/main/spotbugs.html"))
-            setStylesheet("fancy-hist.xsl")
-        }
-    }
-}
+//spotbugsMain {
+//    setExcludeFilter(file("${this.getRootDir()}/config/spotbugs/suppressions.xml"))
+//
+//    reports {
+//        html {
+//            getRequired().set(true)
+//            getOutputLocation().set(file("${this.getBuildDir()}/reports/spotbugs/main/spotbugs.html"))
+//            setStylesheet("fancy-hist.xsl")
+//        }
+//    }
+//}
 
 sourceSets.main.getJava().srcDir(
         getTasks().register("generateTemplates", Copy) {
